--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,15 @@
-cmake_minimum_required(VERSION 2.6)
 project(homesec_witty)
+cmake_minimum_required(VERSION 2.8.3)
+INCLUDE(CPack)
 
-add_executable(homesec_witty main.cpp)
+SET(MAJOR_VERSION "0")
+SET(MINOR_VERSION "0")
+SET(PATCH_VERSION "1")
 
-install(TARGETS homesec_witty RUNTIME DESTINATION bin)
+#FIND_PACKAGE( Qt4 )
+#FIND_PACKAGE( Wt REQUIRED )
+
+SET (WT_CONNECTOR "wthttp" CACHE STRING "Connector used (wthttp or wtfcgi)")
+
+
+add_subdirectory(src)
