--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,10 @@ find_package( OpenCV REQUIRED )
 
 add_executable(homesec_witty main.cpp session.cpp User.cpp)
 
+if(UNIX)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
+endif()
+
 TARGET_LINK_LIBRARIES(homesec_witty
     ${WT_PROJECT}
     ${WT_CONNECTOR}
